# pikaviewer

./: .dockerignore  .gitignore  BRUTAL-TODO.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.package  LICENSE  README.md  REVIEW.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
assets/: Credits.md
crates/iv-app/: Cargo.toml
crates/iv-app/src/: app.rs  config.rs  desktop_integration.rs  dir_watcher.rs  input.rs  macos_events.rs  main.rs  prefetch.rs  settings_window.rs
crates/iv-core/: Cargo.toml
crates/iv-core/src/: format.rs  image_list.rs  lib.rs
crates/iv-format-heic/: Cargo.toml
crates/iv-format-heic/src/: lib.rs
crates/iv-format-raw/: Cargo.toml
crates/iv-format-raw/src/: lib.rs
crates/iv-formats/: Cargo.toml
crates/iv-formats/src/: lib.rs
crates/iv-renderer/: Cargo.toml
crates/iv-renderer/src/: display_mode.rs  lib.rs  renderer.rs
crates/iv-renderer/src/shaders/: image.wgsl
scripts/: build.sh  make-icns.sh  package-linux.sh  package-macos.sh  run.sh
