[workspace]
resolver = "2"
members = [
    "crates/iv-core",
    "crates/iv-formats",
    "crates/iv-renderer",
    "crates/iv-app",
]

[workspace.dependencies]
winit       = "0.30"
wgpu        = "22"
bytemuck    = { version = "1", features = ["derive"] }
pollster    = "0.3"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "ico"] }
egui        = "0.29"
egui-wgpu   = "0.29"
egui-winit  = "0.29"
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"
clap        = { version = "4", features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
