[workspace]
resolver = "2"
members = [
    "crates/iv-core",
    "crates/iv-formats",
    "crates/iv-renderer",
    "crates/iv-app",
    # iv-format-heic is intentionally excluded from workspace members so that
    # `cargo build` without --features iv-app/heic never requires libheif.
    # It is compiled only when pulled in as an optional dep of iv-app.
]

[workspace.dependencies]
winit       = "0.30.13"
wgpu        = "22"
bytemuck    = { version = "1", features = ["derive"] }
pollster    = "0.3"
image       = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "ico"] }
egui        = "0.29"
egui-wgpu   = "0.29"
egui-winit  = "0.29"
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
dirs        = "5"
kamadak-exif = "0.5"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"

# ── Lints ────────────────────────────────────────────────────────────────────
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Noise in a graphics / windowing app — intentional and harmless:
cast_precision_loss      = "allow"   # u32→f32 for pixel math is standard
cast_possible_truncation = "allow"   # clamped values cast safely
cast_sign_loss           = "allow"   # same
cast_possible_wrap       = "allow"   # u32→i32 for window position math
cast_lossless            = "allow"   # u8→f32 `as` is idiomatic in pixel code
missing_errors_doc       = "allow"   # internal code, not a public API
too_many_lines           = "allow"   # splitting event handlers hurts readability
must_use_candidate       = "allow"   # not worth adding everywhere
return_self_not_must_use = "allow"   # same
doc_markdown             = "allow"   # backtick pedantry in internal docs
struct_field_names       = "allow"   # e.g. egui_renderer on Renderer is clear
module_name_repetitions  = "allow"   # e.g. FormatError in format module
needless_pass_by_value   = "allow"   # thread entry points need owned values
