[package]
name    = "iv-format-raw"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
# "rsraw" is the sub-feature that actually compiles the vendored LibRaw C++
# sources. iv-app/raw enables both this crate (as an optional dep) AND this
# feature, so rsraw-sys only builds when explicitly requested.
rsraw = ["dep:rsraw"]

[dependencies]
iv-core = { path = "../iv-core" }
rsraw   = { version = "0.1", optional = true }
