[package]
name    = "iv-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
iv-core   = { path = "../iv-core" }
wgpu      = { workspace = true }
winit     = { workspace = true }
bytemuck  = { workspace = true }
pollster  = { workspace = true }
egui      = { workspace = true }
egui-wgpu = { workspace = true }
anyhow    = { workspace = true }
log       = { workspace = true }
